@@ -1,3 +1,6 @@
+Fri Nov  6 22:54:38 CET 2015
+	Fixing the buffer shrinkage issue, this time with test. -CG
+
 Tue Nov  3 23:24:52 CET 2015
 	Undoing change from Sun Oct 25 15:29:23 CET 2015
 	as the original code was counter-intuitive but
